# nanarinorest

./: .gitignore  .prettierrc.toml  .ruff.toml  LICENSE  README.md  app.py  config.ini  db_create.py  db_test.py  pyproject.toml  requirements.txt  test_captcha.py  test_db.py  test_hash.py  test_jwt.py
.LLTC/: README.md  activation.html  attsct.html  iftcaim.html  iftlist.html  index.html  insureinfo.html  login.html
.LLTC/css/: attsct.css  base.css  common.css  iftlist.css  insureinfo.css  tos.css
.LLTC/js/: DateFormat.js  sweetalert2@11.js
.demo_client/: index.html  readme.md
.demo_client/css/: style.css
.demo_client/js/: main.js
.lltc/: README.md  iftenter.html  tos.html
.lltc/css/: activation.css  iftcaim.css  iftenter.css  login.css
api/: __init__.py  auth.py  card.py  claim.py  demo.py  schemas.py
db/: __init__.py  base.py  models.py
demo_frontend/: index.html
demo_frontend/css/: style.css
demo_frontend/js/: main.js
scripts/: db_create.py  db_test.py
static/: .prettierrc  index.html  main.js  style.css
static/css/: style.css
static/js/: lib.js  main.js
util/: __init__.py  captcha.py  jwt.py  pwd.py
